<resources>
    <string name="app_name">EventManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="image_description">image SplashActivity</string>
    <string name="nav_header_image">nav header image</string>
    <string name="toast_error_message">Без разрешении не работает!</string>
    <string name="dialog_what_action_event">Изменить запись?</string>
    <string name="dialog_delete">Удалить</string>
    <string name="dialog_update">Изменить</string>
    <string name="dialog_nothing">Отмена</string>
    <string name="title_activity_new_event">Новая запись</string>
    <string name="title_activity_update_event">Редактирование</string>
    <string name="calendar_to">по</string>
    <string name="calendar_from">с</string>
    <string name="tv_event_title">Заголовок</string>
    <string name="hint_event_title">Заголовок</string>
    <string name="hint_event_description">Описание</string>
    <string name="tv_event_description">Описание</string>
    <string name="btn_save_event">Сохранить</string>
    <string name="nav_about_app">About app</string>
    <string name="nav_exit">Exit</string>
    <string name="date_from_filter">Начало %1$s</string>
    <string name="date_to_filter">Конец %1$s</string>
</resources>
